<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="#FF07F012"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/hello_my_friend"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="170dp"
        android:textStyle="bold"
        android:textSize="25sp"/>
    <EditText
        android:id="@+id/user_login_auth"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        android:hint="@string/login"
        android:textColorHint="@color/white"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_width="220dp"
        android:layout_height="50dp"/>
    <EditText
        android:id="@+id/user_pass_auth"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_width="220dp"
        android:layout_height="50dp"/>
    <Button
        android:id="@+id/button_auth"
        android:layout_gravity="center"
        android:text="@string/auth"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:layout_marginTop="20dp"
        android:layout_width="220dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/link_to_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/reg"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:textStyle="bold"
        android:textSize="15sp"/>


</LinearLayout>